--- a/blogs/why-email-marketing-is-still-relevant-in-2022/index.html
+++ b/blogs/why-email-marketing-is-still-relevant-in-2022/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- for portfolio -->
+    <meta name="robots" content="noindex">
+    <!-- end -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
