--- a/cases/scaling-ecom-business-from-$152kmo-to-$250kmo/index.html
+++ b/cases/scaling-ecom-business-from-$152kmo-to-$250kmo/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- for portfolio -->
+    <meta name="robots" content="noindex">
+    <!-- end -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
